[package]
name = "authc"
version = "0.1.0"
authors = ["Mateusz <mateusz.pytel@grupakmk.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
iron = "0.6.1"
router = "0.6.0"
env_logger = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.logger]
git = "https://github.com/iron/logger.git"
